@@ -14,6 +14,16 @@ name|taxonomy
 package|;
 end_package
 
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Arrays
+import|;
+end_import
+
 begin_comment
 comment|/*  * Licensed to the Apache Software Foundation (ASF) under one or more  * contributor license agreements.  See the NOTICE file distributed with  * this work for additional information regarding copyright ownership.  * The ASF licenses this file to You under the Apache License, Version 2.0  * (the "License"); you may not use this file except in compliance with  * the License.  You may obtain a copy of the License at  *  *     http://www.apache.org/licenses/LICENSE-2.0  *  * Unless required by applicable law or agreed to in writing, software  * distributed under the License is distributed on an "AS IS" BASIS,  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  * See the License for the specific language governing permissions and  * limitations under the License.  */
 end_comment
@@ -150,6 +160,42 @@ literal|0
 operator|:
 literal|"use CategoryPath.EMPTY to create an empty path"
 assert|;
+for|for
+control|(
+name|String
+name|comp
+range|:
+name|components
+control|)
+block|{
+if|if
+condition|(
+name|comp
+operator|==
+literal|null
+operator|||
+name|comp
+operator|.
+name|isEmpty
+argument_list|()
+condition|)
+block|{
+throw|throw
+operator|new
+name|IllegalArgumentException
+argument_list|(
+literal|"empty or null components not allowed: "
+operator|+
+name|Arrays
+operator|.
+name|toString
+argument_list|(
+name|components
+argument_list|)
+argument_list|)
+throw|;
+block|}
+block|}
 name|this
 operator|.
 name|components
@@ -221,6 +267,42 @@ expr_stmt|;
 block|}
 else|else
 block|{
+for|for
+control|(
+name|String
+name|comp
+range|:
+name|comps
+control|)
+block|{
+if|if
+condition|(
+name|comp
+operator|==
+literal|null
+operator|||
+name|comp
+operator|.
+name|isEmpty
+argument_list|()
+condition|)
+block|{
+throw|throw
+operator|new
+name|IllegalArgumentException
+argument_list|(
+literal|"empty or null components not allowed: "
+operator|+
+name|Arrays
+operator|.
+name|toString
+argument_list|(
+name|comps
+argument_list|)
+argument_list|)
+throw|;
+block|}
+block|}
 name|components
 operator|=
 name|comps
