@@ -16,6 +16,16 @@ end_package
 
 begin_import
 import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Arrays
+import|;
+end_import
+
+begin_import
+import|import
 name|org
 operator|.
 name|apache
@@ -1213,38 +1223,200 @@ operator|<
 literal|0
 argument_list|)
 expr_stmt|;
-name|pother
-operator|=
+block|}
+annotation|@
+name|Test
+DECL|method|testEmptyNullComponents
+specifier|public
+name|void
+name|testEmptyNullComponents
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+comment|// LUCENE-4724: CategoryPath should not allow empty or null components
+name|String
+index|[]
+index|[]
+name|components_tests
+init|=
+operator|new
+name|String
+index|[]
+index|[]
+block|{
+operator|new
+name|String
+index|[]
+block|{
+literal|""
+block|,
+literal|"test"
+block|}
+block|,
+comment|// empty in the beginning
+operator|new
+name|String
+index|[]
+block|{
+literal|"test"
+block|,
+literal|""
+block|}
+block|,
+comment|// empty in the end
+operator|new
+name|String
+index|[]
+block|{
+literal|"test"
+block|,
+literal|""
+block|,
+literal|"foo"
+block|}
+block|,
+comment|// empty in the middle
+operator|new
+name|String
+index|[]
+block|{
+literal|null
+block|,
+literal|"test"
+block|}
+block|,
+comment|// null at the beginning
+operator|new
+name|String
+index|[]
+block|{
+literal|"test"
+block|,
+literal|null
+block|}
+block|,
+comment|// null in the end
+operator|new
+name|String
+index|[]
+block|{
+literal|"test"
+block|,
+literal|null
+block|,
+literal|"foo"
+block|}
+block|,
+comment|// null in the middle
+block|}
+decl_stmt|;
+for|for
+control|(
+name|String
+index|[]
+name|components
+range|:
+name|components_tests
+control|)
+block|{
+try|try
+block|{
+name|assertNotNull
+argument_list|(
 operator|new
 name|CategoryPath
 argument_list|(
-literal|"a/b/c//e"
+name|components
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|fail
+argument_list|(
+literal|"empty or null components should not be allowed: "
+operator|+
+name|Arrays
+operator|.
+name|toString
+argument_list|(
+name|components
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|IllegalArgumentException
+name|e
+parameter_list|)
+block|{
+comment|// ok
+block|}
+block|}
+name|String
+index|[]
+name|path_tests
+init|=
+operator|new
+name|String
+index|[]
+block|{
+literal|"/test"
+block|,
+comment|// empty in the beginning
+literal|"test//foo"
+block|,
+comment|// empty in the middle
+block|}
+decl_stmt|;
+for|for
+control|(
+name|String
+name|path
+range|:
+name|path_tests
+control|)
+block|{
+try|try
+block|{
+name|assertNotNull
+argument_list|(
+operator|new
+name|CategoryPath
+argument_list|(
+name|path
 argument_list|,
 literal|'/'
 argument_list|)
-expr_stmt|;
-name|assertTrue
-argument_list|(
-name|pother
-operator|.
-name|compareTo
-argument_list|(
-name|p
-argument_list|)
-operator|<
-literal|0
 argument_list|)
 expr_stmt|;
-name|assertTrue
+name|fail
 argument_list|(
-name|p
-operator|.
-name|compareTo
-argument_list|(
-name|pother
+literal|"empty or null components should not be allowed: "
+operator|+
+name|path
 argument_list|)
-operator|>
-literal|0
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|IllegalArgumentException
+name|e
+parameter_list|)
+block|{
+comment|// ok
+block|}
+block|}
+comment|// a trailing path separator is produces only one component
+name|assertNotNull
+argument_list|(
+operator|new
+name|CategoryPath
+argument_list|(
+literal|"test/"
+argument_list|,
+literal|'/'
+argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
