@@ -331,6 +331,54 @@ operator|.
 name|toString
 argument_list|()
 expr_stmt|;
+comment|// we cannot have empty path components, so eliminate all prefix as well
+comment|// as middle consecuive delimiter chars.
+name|uniqueValues
+index|[
+name|i
+index|]
+operator|=
+name|uniqueValues
+index|[
+name|i
+index|]
+operator|.
+name|replaceAll
+argument_list|(
+literal|"/+"
+argument_list|,
+literal|"/"
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+name|uniqueValues
+index|[
+name|i
+index|]
+operator|.
+name|startsWith
+argument_list|(
+literal|"/"
+argument_list|)
+condition|)
+block|{
+name|uniqueValues
+index|[
+name|i
+index|]
+operator|=
+name|uniqueValues
+index|[
+name|i
+index|]
+operator|.
+name|substring
+argument_list|(
+literal|1
+argument_list|)
+expr_stmt|;
+block|}
 if|if
 condition|(
 name|uniqueValues
